--- a/drivers/cpuquiet/governors/Makefile
+++ b/drivers/cpuquiet/governors/Makefile
@@ -1,1 +1,4 @@
-obj-y += userspace.o balanced.o runnable_threads.o
+# Bla bla bla
+obj-$(CONFIG_CPUQUIET_GOVERNOR_BALANCED)	+= balanced.o
+obj-$(CONFIG_CPUQUIET_GOVERNOR_RUNNABLE)	+= runnable_threads.o
+
