--- a/arch/arm/configs/cyanogenmod_x3_defconfig
+++ b/arch/arm/configs/cyanogenmod_x3_defconfig
@@ -647,10 +647,14 @@ CONFIG_CPU_IDLE_GOV_LADDER=y
 CONFIG_CPU_IDLE_GOV_MENU=y
 
 #
-# CPUQUIET Framework
-#
+# Cpuquiet
 CONFIG_CPUQUIET_FRAMEWORK=y
-
+CONFIG_CPUQUIET_GOVERNOR_RUNNABLE=y
+CONFIG_CPUQUIET_GOVERNOR_BALANCED=y
+CONFIG_CPUQUIET_DEFAULT_GOV_RUNNABLE=y
+#
+# 
+CONFIG_FSYNC_CONTROL=y
 #
 # Floating point emulation
 #
